--- a/port.css
+++ b/port.css
@@ -9,33 +9,37 @@
   margin: auto;
   background-color: white;
 }
-body {
-  background-image: url("port_images/darkleaf.jpeg");
+a {
+  text-decoration: none;
+  color:#3d4246;
 }
 h1 {
   font-size: 38px;
 }
-ul {
-  padding-left: 60px;
-  padding-right: 50px;
+ ul {
   list-style: none;
-  float: left;
+  margin-right: 40px;
+
 }
  li {
-  float: left;
-  padding: inherit;
-  margin-right: 40px;
-  margin-bottom: 15px;
+  display: inline;
+  font-family: "Work Sans","HelveticaNeue","Helvetica Neue",sans-serif;
+  font-size: 14px;
 }
+
 img {
-
+  margin-right: 5px;
 }
-
 p {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-family: "Work Sans","HelveticaNeue","Helvetica Neue",sans-serif;
+  color: #3d4246;
 }
 h1, h2, h3, h4 {
   font-family: 16px/1.5 "Apercu Light", sans-serif;
+}
+footer, ul {
+  text-align: center;
 }
 /*Dark Woods gallery areas*/
 
