--- a/port.css
+++ b/port.css
@@ -49,6 +49,39 @@ footer, ul {
   margin-top: 40px;
   margin-bottom: 0;
 }
+/*MODAL*/
+button {
+  
+}
+.modal-login {
+  display: none;
+  position: fixed;
+  z-index:1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.modal-content {
+background-color: #fff;
+margin: 20% auto;
+padding: 20px;
+width:50%;
+text-align: center;
+
+}
+.Closebtn {
+  color: #ccc;
+  float: right;
+  font-size: 30px;
+}
+.Closebtn:hover, .Closebtn:focus {
+color: #000;
+text-decoration: none;
+cursor: pointer;
+}
 
 /*float elements*/
 .clearfix::after {
