--- a/port.css
+++ b/port.css
@@ -49,10 +49,23 @@ footer, ul {
   margin-top: 40px;
   margin-bottom: 0;
 }
+
+
+/*Google Map API*/
+
+#map {
+    width: 100%;
+    height: 400px;
+    margin-top: 20px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+
 /*MODAL*/
 input {
   width: 100%;
-  
+
 
 }
 .modal-login {
