--- a/port.css
+++ b/port.css
@@ -1,8 +1,5 @@
 /*This will begin the overall layout of the page*/
-.main-header {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+
 .main-body {
   text-align: center;
   max-width: 900px;
@@ -10,7 +7,17 @@
   background-color: #fff;
 }
 body {
-  background-color: #fff;
+ background-color: #fff;
+}
+
+.dropdown {
+  font-style:  "Work Sans","HelveticaNeue","Helvetica Neue",sans-serif !important;
+  color: #3d4246;
+}
+.dropdown-toggle {
+  background-color: transparent !important;
+  border-color: #fff !important;
+  border-style: solid !important;
 }
 a {
   text-decoration: none;
@@ -49,6 +56,7 @@ footer, ul {
   margin-top: 40px;
   margin-bottom: 0;
 }
+
 /*carousel*/
 .carousel-inner img {
     -webkit-filter: grayscale(90%);
